--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mobx": "^6.3.0",
     "mobx-react-lite": "^3.2.0",
     "react": "^17.0.2",
+    "react-csv": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-i18next": "^11.11.0",
