--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-i18next": "^11.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.3",
     "react-switch-theme": "^0.3.0",
     "validator": "^13.6.0",
     "web-vitals": "^1.0.1"
