--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "chart.js": "^3.5.0",
     "classnames": "^2.3.1",
     "file-saver": "^2.0.5",
     "i18next": "^20.3.2",
@@ -16,6 +17,7 @@
     "mobx": "^6.3.0",
     "mobx-react-lite": "^3.2.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.4",
     "react-csv": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
@@ -25,7 +27,8 @@
     "react-scroll": "^1.8.3",
     "react-switch-theme": "^0.3.0",
     "validator": "^13.6.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "xlsx": "^0.17.0"
   },
   "scripts": {
     "start": "react-scripts start",
